--- a/app/src/main/res/layout/include_iot_dashboard.xml
+++ b/app/src/main/res/layout/include_iot_dashboard.xml
@@ -139,14 +139,24 @@
                 android:layout_weight="0.7"
                 android:background="@drawable/round_shape_app">
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/_id_txtInput"
+                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/radioGroup"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignRight="@+id/radioGroup"
+                    android:layout_below="@+id/radioGroup" />
+
+                <TextView
+                    android:id="@+id/_id_tvStatus"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.3"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent" />
 
 
-                </LinearLayout>
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
