--- a/app/src/main/res/layout/include_iot_dashboard_ver_2.xml
+++ b/app/src/main/res/layout/include_iot_dashboard_ver_2.xml
@@ -33,35 +33,43 @@
             app:layout_constraintHeight_percent="0.3"
             >
 
-            <ImageView
-                android:id="@+id/_id_image"
-                android:layout_width="0dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvImage"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerInside"
-                android:src="@drawable/image_7"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="20dp"
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/_id_image2"
+                android:scrollbars="horizontal"
+                android:padding="@dimen/spacing_large"
                 />
 
-            <ImageView
-                android:id="@+id/_id_image2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:scaleType="centerInside"
-                android:src="@drawable/image_7"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="10dp"
+<!--            <ImageView-->
+<!--                android:id="@+id/_id_image"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:scaleType="centerInside"-->
+<!--                android:src="@drawable/image_7"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginBottom="5dp"-->
+<!--                android:layout_marginEnd="20dp"-->
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/_id_image"
-                />
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/_id_image2"-->
+<!--                />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/_id_image2"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:scaleType="centerInside"-->
+<!--                android:src="@drawable/image_7"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:layout_marginBottom="5dp"-->
+<!--                android:layout_marginEnd="10dp"-->
+
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toEndOf="@id/_id_image"-->
+<!--                />-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -86,16 +94,24 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
-            android:layout_margin="@dimen/spacing_small"
+            android:layout_marginTop="@dimen/spacing_small"
+            android:layout_marginStart="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_small"
             android:background="@drawable/round_shape_app"
 
             app:layout_constraintTop_toBottomOf="@id/bgChart"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvLog"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:padding="@dimen/spacing_large"
+                />
+
         </LinearLayout>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -132,7 +148,7 @@
 
                 <TextView
                     android:id="@+id/tvHour"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:paddingStart="5dp"
@@ -141,12 +157,14 @@
                     android:textColor="@color/white"
                     android:textSize="25sp"
 
+                    app:layout_constraintEnd_toStartOf="@id/tvDate"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
 
                     android:gravity="center"
@@ -154,6 +172,8 @@
                     android:textColor="@color/white"
 
                     android:textStyle="bold"
+                    android:paddingEnd="@dimen/spacing_medium"
+                    android:paddingTop="@dimen/spacing_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tvHour" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -164,6 +184,7 @@
                 android:layout_height="wrap_content"
 
                 android:text="Reset"
+                android:background="@android:color/holo_orange_dark"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -199,10 +220,10 @@
 
                     <it.beppi.tristatetogglebutton_library.TriStateToggleButton
                         android:id="@+id/_id_btnToggle1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="@dimen/spacing_medium"
+                        android:layout_margin="@dimen/spacing_mlarge"
                         app:tbDefaultStatus="off"
                         app:tbIsMidSelectable="false"
                         app:tbOffColor="@color/red_700" />
@@ -232,10 +253,10 @@
 
                     <it.beppi.tristatetogglebutton_library.TriStateToggleButton
                         android:id="@+id/_id_btnToggle2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="@dimen/spacing_medium"
+                        android:layout_margin="@dimen/spacing_mlarge"
                         app:tbDefaultStatus="on"
                         app:tbIsMidSelectable="false"
                         app:tbOffColor="@color/grey_60" />
@@ -265,10 +286,10 @@
 
                     <it.beppi.tristatetogglebutton_library.TriStateToggleButton
                         android:id="@+id/_id_btnToggle3"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="@dimen/spacing_medium"
+                        android:layout_margin="@dimen/spacing_mlarge"
                         app:tbDefaultStatus="on"
                         app:tbIsMidSelectable="false"
                         app:tbOffColor="@color/grey_60" />
@@ -310,30 +331,33 @@
 
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Last Temperature Value"
-                    android:textSize="12sp"
+                    android:text="Last Temperature"
+                    android:textSize="15sp"
                     android:textColor="@color/white" />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <FrameLayout
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_margin="5dp"
-                    app:cardCornerRadius="2dp">
+                    android:background="@drawable/temperature"
+                    >
 
                     <TextView
+                        android:id="@+id/tvTemp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         android:gravity="center"
                         android:padding="7dp"
                         android:text="23.5"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
+                        android:layout_gravity="center"
+                        android:textColor="#FFFF99"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
-                </androidx.cardview.widget.CardView>
+                </FrameLayout>
 
                 <TextView
+                    android:id="@+id/tvTimeTemp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -361,30 +385,36 @@
 
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Last Humidity Value"
-                    android:textSize="12sp"
+                    android:text="Last Humidity"
+                    android:textSize="15sp"
                     android:textColor="@color/white" />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <FrameLayout
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_margin="5dp"
-                    app:cardCornerRadius="2dp">
+                    android:background="@drawable/humidity"
+                    >
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:id="@+id/tvHum"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
                         android:gravity="center"
                         android:padding="7dp"
                         android:text="59"
-                        android:textColor="@color/black"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="@dimen/spacing_mxlarge"
+                        android:layout_marginStart="@dimen/spacing_middle"
+                        android:textColor="#004E98"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
-                </androidx.cardview.widget.CardView>
+                </FrameLayout>
 
                 <TextView
+                    android:id="@+id/tvTimeHum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -406,9 +436,9 @@
                 android:id="@+id/_id_gauge_temper"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="3dp"
+                android:layout_marginEnd="0dp"
                 android:background="@drawable/round_shape_app"
-                android:padding="@dimen/spacing_small"
+                android:padding="@dimen/spacing_large"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/_id_gauge_humidity"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -427,9 +457,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="3dp"
+                android:layout_marginStart="@dimen/spacing_small"
                 android:background="@drawable/round_shape_app"
-                android:padding="@dimen/spacing_small"
+                android:padding="@dimen/spacing_large"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
